smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/list-empty-members.smithy
// Parse error at line 4, column 14 near `}\n`: Missing required members of shape `com.foo#MyList`: [`member`]
namespace com.foo

list MyList {}
